# winding_landscape_v1

./: .gitignore  README.md  example_constraints.yaml  inspect_brep.py  inspect_circle_edge.py  inspect_polygon.py  inspect_slice.py  inspect_stage1.py  pyproject.toml  visualize_geometry.py
src/winding_landscape/feasibility/: checker.py
src/winding_landscape/geometry/: __init__.py  extraction.py  stator_geometry.py
src/winding_landscape/materials/: __init__.py  database.py
src/winding_landscape/materials/data/: awg_table.json  insulation.json
src/winding_landscape/topology/: swat_em_wrapper.py  topology_candidate.py
src/winding_landscape/utils/: logging_config.py
src/winding_landscape/winding/: enumeration.py  winding_candidate.py
tests/: _run_tests.py
tests/unit/: test_config.py  test_electromagnetic.py  test_feasibility.py  test_geometry_internals.py  test_materials.py
winding_landscape_v1/docs/: architecture.md
winding_landscape_v1/src/winding_landscape/: __init__.py  __main__.py  _pydantic_shim.py  cli.py  config.py
winding_landscape_v1/src/winding_landscape/feasibility/: __init__.py
winding_landscape_v1/src/winding_landscape/geometry/: extraction.py
winding_landscape_v1/src/winding_landscape/output/: __init__.py  serialization.py
winding_landscape_v1/tests/: conftest.py  smoke_test_no_brep.py
winding_landscape_v1/tests/integration/: test_pipeline.py
winding_landscape_v1/tests/unit/: test_star_of_slots.py  test_thermal.py  test_topology_enumeration.py  test_winding_enumeration.py
(+13 files in other folders)
