[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "winding_landscape"
version = "1.0.0"
description = "PMSM outrunner stator winding landscape generator"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Winding Landscape Project" }]
license = { text = "Proprietary" }

dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
    "pyarrow>=14.0",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "build123d>=0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "mypy>=1.8",
    "ruff>=0.1.9",
    "hypothesis>=6.92",
]
swat-em = [
    "swat-em>=0.6.3 ; python_version < '3.12'",
]

[project.scripts]
winding-landscape = "winding_landscape.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
winding_landscape = ["materials/data/*.json"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = ["build123d.*", "swat_em.*", "OCP.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RET"]
ignore = ["E501"]  # Line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --strict-markers"
